--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   fluttertoast: ^8.2.1
   flutter_screenutil: ^5.6.1
   google_fonts: ^4.0.3
-
+  http: ^0.13.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
